# research-unix-v10

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  Makefile  README  README.md  WELCOME  licenses.csv  meson.build  meson_options.txt  setup.sh
.codex/: AGENTS.md  config.yaml  setup.sh
.devcontainer/: devcontainer.json
.github/workflows/: proofs.yml  tla.yml
analysis/: analyze_spinlocks.py
docs/: DocRoadmap.md  Doxyfile  IPC.md  Roadmap.md  build_modernization.md  microkernel.md
docs/analysis/: build_modernization.md  ip_reassembly.md  page_fault.md
docs/ben-books/: susv4-2018.tar.bz2
docs/exokernel/: overview.md  services.md  testing.md
docs/services/: services.md  testing.md
modern/: Makefile  acd_c23.c  args.c  spinlock.c
modern/compat/: spinlock.h
modern/compat/posix/: CMakeLists.txt  exec.h  fork.h  mmap.h  pipe.h  posix.c  wait.h
modern/compat/svr4/: svr4_machdep.h
modern/libcapnp/: CMakeLists.txt  Makefile  capnp.c  capnp.cpp  capnp.h  meson.build
modern/memory_server/: CMakeLists.txt  Makefile  memory_server.c  meson.build
modern/tests/: CMakeLists.txt  Makefile  c23_hello.c  c23_test.sh  capability_client.c  capability_integration_test.sh  capnp_client.c  capnp_example.sh  exo_ipc_status_test.c  mailbox_timeout_test.c  mailbox_timeout_test.sh  meson.build  mqueue_blocking_test.c  mqueue_ordering_test.c  mqueue_overflow_test.c  mqueue_timeout_test.c  posix_wrappers_test.c  posix_wrappers_test.sh  process_spinlock_stress.c  process_spinlock_stress.sh  ptrace_concurrency_test.c  ptrace_concurrency_test.sh  spinlock_fairness.c  spinlock_test.c  spinlock_test.sh  thread_spinlock_stress.c  thread_spinlock_stress.sh
r70/CC/: types.h
r70/CC/sys/: types.h
r70/oCC/: varargs.h
r70/sys/: types.h
tools/: README.md  cross-env.sh  metrics.sh  mit-header.txt  update-license-db.py
tools/memserver/: Makefile  memserver.c
unix-v10-coq/: Makefile  README.md  _CoqProject
unix-v10-coq/theories/Core/: LambdaCalc.v  MuCalc.v  NuCalc.v  PiCalc.v
unix-v10-coq/theories/Migration/: FunctorF.v
unix-v10-coq/theories/Proofs/: Preservation.v
v10/asm.libm/: Makefile
v10/cmd/: charge.c  fgrep.c  grep.c  unexpand.c
v10/cmd/asd++/: Makefile
v10/cmd/compat/: Makefile  unixtraps.c
v10/cmd/egrep/: anal.c  bm.c  egrep.c  main.c
v10/cmd/gre/: hdr.h
v10/cmd/sh/: io.c  service.c  xec.c
v10/cmd/sml/src/runtime/: CompM68.mos  CompNS32.mos  CompSparc.mos  CompVax.mos  IntM68.mos  IntNS32.mos  IntNull.mos  IntSparc.mos  IntVax.mos  descriptor.h  ml.h  prim.h  prof.h  tags.h
v10/games/: banner.c
v10/ipc/: spinlock.c
v10/ipc/capnp/: Makefile  capnp.c  capnp.h
v10/ipc/h/: defs.h  exo_ipc.h  ipc.h  mailbox.h  mailbox_global.h  mailbox_t.h  spinlock.h
v10/ipc/internet/: config.h
v10/ipc/libin/: config.h
v10/ipc/libipc/: ipccreat.c  ipcexec.c  ipclogin.c  ipcmesgexec.c  ipcopen.c  ipcproto.c  mailbox.c  mkfile  oipclogin.c  qns.c
v10/ipc/mgrs/4.3gate/: ipcproto.c  main.c
v10/ipc/mgrs/common/: dialout.c
v10/ipc/mgrs/svcmgr/: gate.c  ngate.c
v10/ipc/mgrs/tcpmgr/: dial.c
v10/libF77/: Version.c  abort_.c  c_abs.c  c_cos.c  c_div.c  c_exp.c  c_log.c  c_sin.c  c_sqrt.c  cabs.c  d_abs.c  d_acos.c  d_asin.c  d_atan.c  d_atn2.c  d_cnjg.c  d_cos.c  d_cosh.c  d_dim.c  d_exp.c  d_imag.c  d_int.c  d_lg10.c  d_log.c  d_mod.c  d_nint.c  d_prod.c  d_sign.c  d_sin.c  d_sinh.c  d_sqrt.c  d_tan.c  d_tanh.c  derf_.c  derfc_.c  ef1asc_.c  ef1cmc_.c  erf_.c  erfc_.c  getarg_.c  (+74 more)
v10/libF77/notused/: mclock_.c  outstr_.c  subout.c
v10/libF77/old/: Version.c  hl_ge.c  hl_gt.c  hl_le.c  hl_lt.c  main.c  s_cat.c  s_paus.c  z_sqrt.c
v10/libI77/: Version.c  backspace.c  close.c  dfe.c  dolio.c  due.c  endfile.c  err.c  fmt.c  fmtlib.c  iio.c  ilnw.c  inquire.c  lread.c  lwrite.c  open.c  rdfmt.c  rewind.c  rsfe.c  rsli.c  rsne.c  sfe.c  sig_die.c  sue.c  typesize.c  uio.c  util.c  wref.c  wrtfmt.c  wsfe.c  wsle.c  wsne.c  xwsne.c
v10/libI77/d/: Version.c  close.c  dfe.c  due.c  endfile.c  err.c  fmt.c  fmtlib.c  iio.c  ilnw.c  inquire.c  lread.c  lwrite.c  open.c  rsli.c  rsne.c  sig_die.c  uio.c  util.c  wref.c  wrtfmt.c  wsne.c  xwsne.c
v10/libI77/notused/: ctest.c  data.c  dballoc.c  ecvt.c  filbuf.c  findiop.c  flsbuf.c  fopen.5.c  fopen.c  fputs.c  fread.c  fseek.c  ftell.c  ftest.c  fwrite.c  lib.c  ltostr.c  nio.c  puts.c  rew.c  setbuf.c  setvbuf.c  stest.c
v10/libI77/old/: Version.c  backspace.c  close.c  dfe.c  due.c  endfile.c  err.c  inquire.c  lio.c  lread.c  open.c  rdfmt.c  rewind.c  rsfe.c  sfe.c  sue.c  uio.c  wref0.c  wrtfmt.c  wsfe.c
v10/libI77/old1/: Version.c  close.c  dfe.c  due.c  endfile.c  err.c  fmt.c  fmtlib.c  iio.c  ilnw.c  inquire.c  lread.c  lwrite.c  open.c  rsli.c  rsne.c  uio.c  util.c  wref.c  wrtfmt.c  wsne.c  xwsne.c
v10/libc/: mkfile  omakefile
v10/libc/stdio/ostdio/: olibcmkfile
v10/libj/: Makefile
v10/ncurses/screen/: doscan.c
v10/sys/: CMakeLists.txt  Makefile
v10/sys/fs/: alloc.c  neta.c  netb.c
v10/sys/inet/: ip_arp.c  ip_device.c  ip_input.c
v10/sys/io/: archosld.c  bda.c  bio.c  bitest.c  connld.c  cure.c  debna.c  devnonet.c  hp.c  im.c  kb.c  mg.c  okb.c  spipe.c  uda.c  up.c
v10/sys/md/: Makefile  mchkcomet.c  mchkmfair.c  mchkmflow.c  mchknaut.c  mchkstar.c  nautbddump.c  ubamap.c
v10/sys/mkconf/: mkconf.h
v10/sys/ml/: Makefile  swtch.s
v10/sys/os/: Makefile  clock.c  main.c  sched_lock.c  sig.c  slp.c  sys4.c
v10/sys/services/: Makefile  fs_proxy.c  proc_manager.c  services.c  services.h
v10/sys/sys/: acct.h  bad144.h  bda.h  biaddr.h  biic.h  buf.h  bvp.h  conf.h  debna.h  inode.h  mscp.h  param.h  proc.h  sched.h  scsi.h  spinlock.h  stream.h  systm.h  types.h
v10/sys/sys/inet/: ip_var.h
v10/sys/vm/: ovmpage.c  vmpage.c  vmsched.c  vmsubr.c  vmswap.c  xvmpage.c
verification/: Caps.cfg  Caps.tla  IPC.cfg  IPC.tla  TicketLock.cfg  TicketLock.tla
verification/agda/: HelloWorld.agda
verification/isabelle/: HelloWorld.thy  ROOT
